# SwigTest

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt
src/PackA/: CMakeLists.txt  PackA.cpp  PackA.h  PackA.i  PackAGlobal.h
src/PackA/PackATest/: CMakeLists.txt  main.cpp
